--- a/localisation/PER_victory_points_l_english.yml
+++ b/localisation/PER_victory_points_l_english.yml
@@ -1,48 +1,48 @@
 ﻿l_english:
- VICTORY_POINTS_1982:0 "Qom"
- VICTORY_POINTS_12773:0 "Kermanshah"
- VICTORY_POINTS_7604:0 "Urmia"
- VICTORY_POINTS_10385:0 "Babol"
- VICTORY_POINTS_4637:0 "Rasht"
- VICTORY_POINTS_2070:0 "Zahedan"
- VICTORY_POINTS_2065:0 "Arak"
- VICTORY_POINTS_7969:0 "Qazvin"
- VICTORY_POINTS_8031:0 "Yazd"
+ VICTORY_POINTS_1982:0 "쿰"
+ VICTORY_POINTS_12773:0 "케르만샤"
+ VICTORY_POINTS_7604:0 "우르미아"
+ VICTORY_POINTS_10385:0 "바볼"
+ VICTORY_POINTS_4637:0 "라슈트"
+ VICTORY_POINTS_2070:0 "자헤단"
+ VICTORY_POINTS_2065:0 "아라크"
+ VICTORY_POINTS_7969:0 "카즈빈"
+ VICTORY_POINTS_8031:0 "야즈드"
  
- VICTORY_POINTS_8123:0 "Kirkuk"
- VICTORY_POINTS_12839:0 "Ramadi"
- VICTORY_POINTS_7994:0 "Najaf"
- VICTORY_POINTS_10876:0 "Karbala"
- VICTORY_POINTS_12046:0 "Fallujah"
- VICTORY_POINTS_3916:0 "Arbil"
+ VICTORY_POINTS_8123:0 "키르쿠크"
+ VICTORY_POINTS_12839:0 "라마디"
+ VICTORY_POINTS_7994:0 "나자프"
+ VICTORY_POINTS_10876:0 "카르발라"
+ VICTORY_POINTS_12046:0 "팔루자"
+ VICTORY_POINTS_3916:0 "아르빌"
  
- VICTORY_POINTS_5064:0 "Kandahar"
- VICTORY_POINTS_12248:0 "Kunduz"
+ VICTORY_POINTS_5064:0 "칸다하르"
+ VICTORY_POINTS_12248:0 "쿤두즈"
  
- VICTORY_POINTS_5037:0 "Mecca"
+ VICTORY_POINTS_5037:0 "메카"
  
- VICTORY_POINTS_7140:0 "Idlib"
- VICTORY_POINTS_1088:0 "Latakia"
- VICTORY_POINTS_10087:0 "Tartus"
- VICTORY_POINTS_1056:0 "Homs"
+ VICTORY_POINTS_7140:0 "이들리브"
+ VICTORY_POINTS_1088:0 "라타키아"
+ VICTORY_POINTS_10087:0 "타르투스"
+ VICTORY_POINTS_1056:0 "홈스"
  
- VICTORY_POINTS_11984:0 "Nicosia"
- VICTORY_POINTS_7193:0 "Limassol"
+ VICTORY_POINTS_11984:0 "니코시아"
+ VICTORY_POINTS_7193:0 "리마솔"
  
- VICTORY_POINTS_7639:0 "Dushanbe"
- VICTORY_POINTS_11687:0 "Khujand"
+ VICTORY_POINTS_7639:0 "두샨베"
+ VICTORY_POINTS_11687:0 "후잔트"
  
- VICTORY_POINTS_12333:0 "Ashgabat"
- VICTORY_POINTS_10742:0 "Turkmenabat"
- VICTORY_POINTS_7560:0 "Merv"
+ VICTORY_POINTS_12333:0 "아슈하바트"
+ VICTORY_POINTS_10742:0 "투르크메나바트"
+ VICTORY_POINTS_7560:0 "메르브"
  
- VICTORY_POINTS_1554:0 "Samarkand"
- VICTORY_POINTS_2058:0 "Andijan"
- VICTORY_POINTS_10470:0 "Qarshi"
- VICTORY_POINTS_12324:0 "Nukus"
- VICTORY_POINTS_4499:0 "Bukhara"
+ VICTORY_POINTS_1554:0 "사마르칸트"
+ VICTORY_POINTS_2058:0 "안디잔"
+ VICTORY_POINTS_10470:0 "카르시"
+ VICTORY_POINTS_12324:0 "누쿠스"
+ VICTORY_POINTS_4499:0 "부하라"
  
- VICTORY_POINTS_11674:0 "Ganja"
+ VICTORY_POINTS_11674:0 "간자"
  
  
  
