--- a/localisation/ftu_events_l_english.yml
+++ b/localisation/ftu_events_l_english.yml
@@ -1,81 +1,81 @@
 ﻿l_english:
  
- fcolony.1.t:0 "Peaceful Transition of Power in the North Africa"
- fcolony.1.d:0 "The government of the North Africa has officially transitioned from the former French administration to a government ruled by the local people. The French forces and government left this morning to return to their homeland of France. Decolonisation is now one step further."
- fcolony.1.a:0 "Not Great..."
- fcolony.2.t:0 "Peaceful Transition of Power in Western Africa"
- fcolony.2.d:0 "The government of the Western Africa has officially transitioned from the former French administration to a government ruled by the local people. The French forces and government left this morning to return to their homeland of France. Decolonisation is now one step further."
- fcolony.2.a:0 "Not Great..."
- fcolony.3.t:0 "Peaceful Transition of Power in the Equatorial Africa"
- fcolony.3.d:0 "The government of Equatorial Africa has officially transitioned from the former French administration to a government ruled by the local people. The French forces and government left this morning to return to their homeland of France. Decolonisation is now one step further."
- fcolony.3.a:0 "Not Great..."
- fcolony.4.t:0 "Peaceful Transition of Power in Indochina"
- fcolony.4.d:0 "The government of Indochina has officially transitioned from the former French administration to a government ruled by the local people. The French forces and government left this morning to return to their homeland of France. Decolonisation is now one step further."
- fcolony.4.a:0 "Not Great..."
- fcolony.15.t:0 "Peaceful Transition of Power in Syria"
- fcolony.15.d:0 "The government of Syria has officially transitioned from the former French administration to a government ruled by the local people. The French forces and government left this morning to return to their homeland of France. Decolonisation is now one step further."
- fcolony.15.a:0 "Not Great..."
+ fcolony.1.t:0 "북아프리카에서의 평화적 권력 이양"
+ fcolony.1.d:0 "북아프리카 정부는 공식적으로 이전 프랑스 행정부에서 지역 주민들이 통치하는 정부로 전환했습니다. 프랑스군과 정부는 오늘 아침 고국인 프랑스로 돌아가기 위해 출발했습니다. 탈식민지화는 이제 한 단계 더 나아갔습니다."
+ fcolony.1.a:0 "대단하지 않아..."
+ fcolony.2.t:0 "서아프리카에서의 평화적 권력 이양"
+ fcolony.2.d:0 "서아프리카 정부는 공식적으로 이전 프랑스 행정부에서 지역 주민들이 통치하는 정부로 전환했습니다. 프랑스군과 정부는 오늘 아침 고국인 프랑스로 돌아가기 위해 출발했습니다. 탈식민지화는 이제 한 단계 더 나아갔습니다."
+ fcolony.2.a:0 "대단하지 않아..."
+ fcolony.3.t:0 "적도 아프리카에서의 평화적 권력 이양"
+ fcolony.3.d:0 "적도 아프리카 정부는 공식적으로 이전 프랑스 행정부에서 지역 주민들이 통치하는 정부로 전환했습니다. 프랑스군과 정부는 오늘 아침 고국인 프랑스로 돌아가기 위해 출발했습니다. 탈식민지화는 이제 한 단계 더 나아갔습니다."
+ fcolony.3.a:0 "대단하지 않아..."
+ fcolony.4.t:0 "인도차이나에서의 평화적 권력 이양"
+ fcolony.4.d:0 "인도차이나 정부는 공식적으로 이전 프랑스 행정부에서 지역 주민들이 통치하는 정부로 전환했습니다. 프랑스군과 정부는 오늘 아침 고국인 프랑스로 돌아가기 위해 출발했습니다. 탈식민지화는 이제 한 단계 더 나아갔습니다."
+ fcolony.4.a:0 "대단하지 않아..."
+ fcolony.15.t:0 "시리아에서의 평화적 권력 이양"
+ fcolony.15.d:0 "시리아 정부는 공식적으로 이전 프랑스 행정부에서 지역 주민들이 통치하는 정부로 전환했습니다. 프랑스군과 정부는 오늘 아침 고국인 프랑스로 돌아가기 위해 출발했습니다. 탈식민지화는 이제 한 단계 더 나아갔습니다."
+ fcolony.15.a:0 "대단하지 않아..."
 
- fcolony.5.t:0 "Uncertainty in the Northern Africa"
- fcolony.5.d:0 "Recently, the government of the Northern Africa has announced that it will be seeking further independence from their French masters.\nIt is unknown how the French officially reacted to this proclamation, but it is expected to be met by hostilities from the French government. The North African government is expected to experience radical changes, but the direction of which is still uncertain."
- fcolony.5.a:0 "This is worrying..."
- fcolony.5.b:0 "This is worrying..."
- fcolony.6.t:0 "Uncertainty in the Western Africa"
- fcolony.6.d:0 "Recently, the government of the Western Africa has announced that it will be seeking further independence from their French masters.\nIt is unknown how the French officially reacted to this proclamation, but it is expected to be met by hostilities from the French government. The West African government is expected to experience radical changes, but the direction of which is still uncertain."
- fcolony.6.a:0 "This is worrying..."
- fcolony.6.b:0 "This is worrying..."
- fcolony.7.t:0 "Uncertainty in the Equatorial Africa"
- fcolony.7.d:0 "Recently, the government of Equatorial Africa has announced that it will be seeking further independence from their French masters.\nIt is unknown how the French officially reacted to this proclamation, but it is expected to be met by hostilities from the French government. The Central African government is expected to experience radical changes, but the direction of which is still uncertain."
- fcolony.7.a:0 "This is worrying..."
- fcolony.7.b:0 "This is worrying..."
- fcolony.8.t:0 "Uncertainty in Indochina"
- fcolony.8.d:0 "Recently, the government of Indochina has announced that it will be seeking further independence from their French masters.\nIt is unknown how the French officially reacted to this proclamation, but it is expected to be met by hostilities from the French government. The Indochinese government is expected to experience radical changes, but the direction of which is still uncertain."
- fcolony.8.a:0 "This is worrying..."
- fcolony.8.b:0 "This is worrying..."
- fcolony.16.t:0 "Uncertainty in Syria"
- fcolony.16.d:0 "Recently, the government of Syria has announced that it will be seeking further independence from their French masters.\nIt is unknown how the French officially reacted to this proclamation, but it is expected to be met by hostilities from the French government. The Syrian government is expected to experience radical changes, but the direction of which is still uncertain."
- fcolony.16.a:0 "This is worrying..."
- fcolony.16.b:0 "This is worrying..."
+ fcolony.5.t:0 "북아프리카의 불안정성"
+ fcolony.5.d:0 "최근, 북아프리카 정부는 프랑스 주인들로부터 더 많은 독립을 추구할 것이라고 발표했습니다.\n이 선언에 대해 프랑스가 공식적으로 어떤 반응을 보였는지는 알려지지 않았지만, 프랑스 정부의 강한 반대를 맞을 것으로 예상됩니다. 북아프리카 정부는 급진적인 변화를 겪을 것으로 예상되지만 그 방향은 여전히 불투명합니다."
+ fcolony.5.a:0 "걱정되는군..."
+ fcolony.5.b:0 "걱정되는군..."
+ fcolony.6.t:0 "서아프리카의 불안정성"
+ fcolony.6.d:0 "최근, 서아프리카 정부는 프랑스 주인들로부터 더 많은 독립을 추구할 것이라고 발표했습니다.\n이 선언에 대해 프랑스가 공식적으로 어떤 반응을 보였는지는 알려지지 않았지만, 프랑스 정부의 강한 반대를 맞을 것으로 예상됩니다. 서아프리카 정부는 급진적인 변화를 겪을 것으로 예상되지만 그 방향은 여전히 불투명합니다."
+ fcolony.6.a:0 "걱정되는군..."
+ fcolony.6.b:0 "걱정되는군..."
+ fcolony.7.t:0 "적도 아프리카의 불안정성"
+ fcolony.7.d:0 "최근, 적도 아프리카 정부는 프랑스 주인들로부터 더 많은 독립을 추구할 것이라고 발표했습니다.\n이 선언에 대해 프랑스가 공식적으로 어떤 반응을 보였는지는 알려지지 않았지만, 프랑스 정부의 강한 반대를 맞을 것으로 예상됩니다. 중앙아프리카 정부는 급진적인 변화를 겪을 것으로 예상되지만 그 방향은 여전히 불투명합니다."
+ fcolony.7.a:0 "걱정되는군..."
+ fcolony.7.b:0 "걱정되는군..."
+ fcolony.8.t:0 "인도차이나의 불안정성"
+ fcolony.8.d:0 "최근, 인도차이나 정부는 프랑스 주인들로부터 더 많은 독립을 추구할 것이라고 발표했습니다.\n이 선언에 대해 프랑스가 공식적으로 어떤 반응을 보였는지는 알려지지 않았지만, 프랑스 정부의 강한 반대를 맞을 것으로 예상됩니다. 인도차이나 정부는 급진적인 변화를 겪을 것으로 예상되지만 그 방향은 여전히 불투명합니다."
+ fcolony.8.a:0 "걱정되는군..."
+ fcolony.8.b:0 "걱정되는군..."
+ fcolony.16.t:0 "시리아의 불안정성"
+ fcolony.16.d:0 "최근, 시리아 정부는 프랑스 주인들로부터 더 많은 독립을 추구할 것이라고 발표했습니다.\n이 선언에 대해 프랑스가 공식적으로 어떤 반응을 보였는지는 알려지지 않았지만, 프랑스 정부의 강한 반대를 맞을 것으로 예상됩니다. 시리아 정부는 급진적인 변화를 겪을 것으로 예상되지만 그 방향은 여전히 불투명합니다."
+ fcolony.16.a:0 "걱정되는군..."
+ fcolony.16.b:0 "걱정되는군..."
 
- fcolony.10.t:0 "Indochina requests permission for independence referendum"
- fcolony.10.d:0 "The local colonial government has approved our request to hold a referendum to determine our fate within the French colonial empire. It is their choice and they seek independence. It is now the question of whether we will respect their will?"
- fcolony.10.a:0 "Granted, Democracy is established"
- fcolony.10.b:0 "Referendum is held illegally"
- fcolony.11.t:0 "Northern African Colonies request permission for independence referendums"
- fcolony.11.d:0 "The local colonial government has approved our request to hold a referendum to determine our fate within the French colonial empire. It is their choice and they seek independence. It is now the question of whether we will respect their will?"
- fcolony.11.a:0 "Granted, Democracy is established"
- fcolony.11.b:0 "Referendum is held illegally"
- fcolony.12.t:0 "West African Colonies request permission for independence referendums"
- fcolony.12.d:0 "The local colonial government has approved our request to hold a referendum to determine our fate within the French colonial empire. It is their choice and they seek independence. It is now the question of whether we will respect their will?"
- fcolony.12.a:0 "Granted, Democracy is established"
- fcolony.12.b:0 "Referendum is held illegally"
- fcolony.13.t:0 "Equatorial African Colonies request permission for independence referendumsm"
- fcolony.13.d:0 "The local colonial government has approved our request to hold a referendum to determine our fate within the French colonial empire. It is their choice and they seek independence. It is now the question of whether we will respect their will?"
- fcolony.13.a:0 "Granted, Democracy is established"
- fcolony.13.b:0 "Referendum is held illegally"
- fcolony.17.t:0 "Syria requests permission for independence referendum"
- fcolony.17.d:0 "The local colonial government has approved our request to hold a referendum to determine our fate within the French colonial empire. It is their choice and they seek independence. It is now the question of whether we will respect their will?"
- fcolony.17.a:0 "Granted, Democracy is established"
- fcolony.17.b:0 "Referendum is held illegally"
+ fcolony.10.t:0 "인도차이나가 독립 주민투표 허가를 요청하다"
+ fcolony.10.d:0 "지역 식민지 정부는 프랑스 식민 제국 내에서의 운명을 결정하기 위해 국민투표를 실시하자는 우리의 요청을 승인했습니다. 그들은 독립을 추구하는 선택을 했습니다. 이제 문제는 우리가 그들의 의지를 존중할 것인지에 달렸습니다."
+ fcolony.10.a:0 "승인되고, 민주정이 수립된다."
+ fcolony.10.b:0 "국민투표가 불법적으로 열린다."
+ fcolony.11.t:0 "북아프리카 식민지가 독립 주민투표 허가를 요청하다"
+ fcolony.11.d:0 "지역 식민지 정부는 프랑스 식민 제국 내에서의 운명을 결정하기 위해 국민투표를 실시하자는 우리의 요청을 승인했습니다. 그들은 독립을 추구하는 선택을 했습니다. 이제 문제는 우리가 그들의 의지를 존중할 것인지에 달렸습니다."
+ fcolony.11.a:0 "승인되고, 민주정이 수립된다."
+ fcolony.11.b:0 "국민투표가 불법적으로 열린다."
+ fcolony.12.t:0 "서아프리카 식민지가 독립 주민투표 허가를 요청하다"
+ fcolony.12.d:0 "지역 식민지 정부는 프랑스 식민 제국 내에서의 운명을 결정하기 위해 국민투표를 실시하자는 우리의 요청을 승인했습니다. 그들은 독립을 추구하는 선택을 했습니다. 이제 문제는 우리가 그들의 의지를 존중할 것인지에 달렸습니다."
+ fcolony.12.a:0 "승인되고, 민주정이 수립된다."
+ fcolony.12.b:0 "국민투표가 불법적으로 열린다."
+ fcolony.13.t:0 "적도 아프리카 식민지가 독립 주민투표 허가를 요청하다"
+ fcolony.13.d:0 "지역 식민지 정부는 프랑스 식민 제국 내에서의 운명을 결정하기 위해 국민투표를 실시하자는 우리의 요청을 승인했습니다. 그들은 독립을 추구하는 선택을 했습니다. 이제 문제는 우리가 그들의 의지를 존중할 것인지에 달렸습니다."
+ fcolony.13.a:0 "승인되고, 민주정이 수립된다."
+ fcolony.13.b:0 "국민투표가 불법적으로 열린다."
+ fcolony.17.t:0 "시리아가 독립 주민투표 허가를 요청하다"
+ fcolony.17.d:0 "지역 식민지 정부는 프랑스 식민 제국 내에서의 운명을 결정하기 위해 국민투표를 실시하자는 우리의 요청을 승인했습니다. 그들은 독립을 추구하는 선택을 했습니다. 이제 문제는 우리가 그들의 의지를 존중할 것인지에 달렸습니다."
+ fcolony.17.a:0 "승인되고, 민주정이 수립된다."
+ fcolony.17.b:0 "국민투표가 불법적으로 열린다."
 
- fcolony.14.t:0 "Armed uprising in the colonies!"
- fcolony.14.d:0 "We are receiving reports of an armed uprising in our colonial empire. Locals workers join to wage a world proletariat revolution.\nThey seek independence from our rule and they are not afraid to sacrifice their lives in the name of the revolution."
- fcolony.14.a:0 "This is worrying..."
+ fcolony.14.t:0 "식민지에서의 무장 봉기!"
+ fcolony.14.d:0 "우리 식민 제국에서 무장 봉기가 발생했다는 보고를 받고 있습니다. 지역 노동자들이 세계 프롤레타리아 혁명을 일으키기 위해 동참합니다.\n그들은 우리의 통치로부터 독립을 추구하며 혁명의 이름으로 목숨을 바치는 것을 두려워하지 않습니다."
+ fcolony.14.a:0 "걱정되는군..."
  
- fcolony.18.t:0 "Turkish Ultimatum!"
- fcolony.18.d:0 "We've just received a telegram from the Turkish government. They demand a total re-integration in the newly formed Ottoman Empire.\nIt is our chance to escape the French rule. How shall we procede?"
- fcolony.18.a:0 "Submit (End Game)"
- fcolony.18.b:0 "Submit (Puppet)"
- fcolony.18.c:0 "No Way!"
+ fcolony.18.t:0 "터키의 최후통첩!"
+ fcolony.18.d:0 "우리는 방금 터키 정부로부터 전보를 받았습니다. 그들은 새로 형성된 오스만 제국에 완전한 재통합을 요구합니다.\n이것은 프랑스 지배에서 벗어날 수 있는 기회입니다. 어떻게 진행해야 합니까?"
+ fcolony.18.a:0 "받아들인다. (게임 종료)"
+ fcolony.18.b:0 "받아들인다. (괴뢰국화)"
+ fcolony.18.c:0 "절대 안 돼!"
 
- FTU_one_africa_idea:0 "Ethnical Unity Idea"
- FRA_native_conscription:0 "Native Conscription"
- FRA_equality:0 "Equal Rights Act"
- FRA_progress_cult_focus:0 "Socialist Science"
- FRA_peoples_army:0 "People's Army"
- FRA_ethnic_boundaries_idea:0 "Ethnic Boundaries"
- FRA_authoritarian_regime:0 "Authoritarianism"
- FRA_economic_programms:0 "Economic Programmes"
- FTU_new_penal_system_1:0 "Penal System I"
- FTU_new_penal_system_2:0 "Penal System II"
- FRA_french_developers:0 "French Expertise"
+ FTU_one_africa_idea:0 "민족적 통합 신념"
+ FRA_native_conscription:0 "원주민 징병"
+ FRA_equality:0 "평등권법"
+ FRA_progress_cult_focus:0 "사회주의 과학"
+ FRA_peoples_army:0 "인민군"
+ FRA_ethnic_boundaries_idea:0 "민족 경계"
+ FRA_authoritarian_regime:0 "권위주의"
+ FRA_economic_programms:0 "경제 계획"
+ FTU_new_penal_system_1:0 "형벌제 I"
+ FTU_new_penal_system_2:0 "형벌제 II"
+ FRA_french_developers:0 "프랑스 전문 지식"
