--- a/localisation/rus_events_l_english.yml
+++ b/localisation/rus_events_l_english.yml
@@ -161,19 +161,19 @@
  russia.54.a:0 "흥미롭군."
  russia.54.b:0 "물론 우리는 할 것이다."
 
- russia.55.t:0 "투르케스탄 봉기!"
- russia.55.d:0 "우리 제국은 큰 소요사태를 겪었습니다. 러시아 국민들은 변화를 바라고 있는 반면 투르케스탄 민족주의자들은 이 기회를 이용해 러시아 제국으로부터의 독립을 선언했습니다.\n지금 우리는 침략이 필요한지 아니면 이 문제가 무혈로 귀결될 수 있는지를 결정할 것입니다."
- russia.55.a:0 "투르케스탄의 독립을 인정한다 (투르케스탄으로 플레이)."
- russia.55.b:0 "투르케스탄의 독립을 인정한다."
+ russia.55.t:0 "투르키스탄 봉기!"
+ russia.55.d:0 "우리 제국은 큰 소요사태를 겪었습니다. 러시아 국민들은 변화를 바라고 있는 반면 투르키스탄 민족주의자들은 이 기회를 이용해 러시아 제국으로부터의 독립을 선언했습니다.\n지금 우리는 침략이 필요한지 아니면 이 문제가 무혈로 귀결될 수 있는지를 결정할 것입니다."
+ russia.55.a:0 "투르키스탄의 독립을 인정한다. (투르키스탄으로 플레이)"
+ russia.55.b:0 "투르키스탄의 독립을 인정한다."
  russia.55.c:0 "받아들일 수 없다!"
  
- russia.56.t:0 "투르케스탄 무장 투쟁"
- russia.56.d:0 "러시아는 큰 소요사태를 겪었습니다. 러시아 국민들은 변화를 바라고 있는 반면 투르크스탄 민족주의자들은 이 기회를 이용해 러시아 제국으로부터의 독립을 선언했다습니.\n러시아는 이제 침략이 필요한지, 아니면 이 문제가 무혈로 귀결될 수 있는지를 결정할 것입니다."
+ russia.56.t:0 "투르키스탄 무장 투쟁"
+ russia.56.d:0 "러시아는 큰 소요사태를 겪었습니다. 러시아 국민들은 변화를 바라고 있는 반면 투르키스탄 민족주의자들은 이 기회를 이용해 러시아 제국으로부터의 독립을 선언했다습니.\n러시아는 이제 침략이 필요한지, 아니면 이 문제가 무혈로 귀결될 수 있는지를 결정할 것입니다."
  russia.56.a:0 "이 일은 잘 끝나지 않을지도 모른다."
  russia.56.b:0 "이 일은 잘 끝나지 않을지도 모른다."
  
- russia.57.t:0 "투르케스탄 침공"
- russia.57.d:0 "우리는 이제 투르크케스탄 침공과 수복을 진행할 준비가 되어 있습니다. 이 지역은 최근 이 지역의 주요 철도 교차로와 주요 도시를 장악하고 있는 지역 반군들에 의해 점령되었습니다."
+ russia.57.t:0 "투르키스탄 침공"
+ russia.57.d:0 "우리는 이제 투르키스탄 침공과 수복을 진행할 준비가 되어 있습니다. 이 지역은 최근 이 지역의 주요 철도 교차로와 주요 도시를 장악하고 있는 지역 반군들에 의해 점령되었습니다."
  russia.57.a:0 "전쟁이다!"
  russia.57.b:0 "우린 다른 할 일이 있다..."
  
