--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2380,12 +2380,12 @@
  TMS_democratic_DEF:1 "투르크메니스탄 공화국"
  TMS_neutrality:0 "투르크메니스탄"
  TMS_neutrality_DEF:0 "투르크메니스탄"
- TMS_communism:1 "투르케스탄 자치 소비에트 사회주의 공화국"
- TMS_communism_DEF:1 "투르케스탄 자치 소비에트 사회주의 공화국"
+ TMS_communism:1 "투르키스탄 소비에트 사회주의 자치 공화국"
+ TMS_communism_DEF:1 "투르키스탄 소비에트 사회주의 자치 공화국"
  TMS_fascism_ADJ:1 "히바"
  TMS_democratic_ADJ:0 "투르크멘"
  TMS_neutrality_ADJ:0 "투르크멘"
- TMS_communism_ADJ:1 "투르케스탄"
+ TMS_communism_ADJ:1 "투르키스탄"
  UAE_fascism:1 "아랍 토후국"
  UAE_fascism_DEF:1 "아랍 토후국"
  UAE_democratic:1 "휴전국"
@@ -2614,18 +2614,18 @@
  RUS_2_conservatives_ADJ:0 "러시아"
  RUS_2_socialist_ADJ:0 "러시아"
  
- TUK_democratic:0 "투르케스탄 공화국"
- TUK_democratic_DEF:0 "투르케스탄 공화국"
- TUK_neutrality:0 "투르케스탄 칸국"
- TUK_neutrality_DEF:0 "투르케스탄 칸국"
+ TUK_democratic:0 "투르키스탄 공화국"
+ TUK_democratic_DEF:0 "투르키스탄 공화국"
+ TUK_neutrality:0 "투르키스탄 칸국"
+ TUK_neutrality_DEF:0 "투르키스탄 칸국"
  TUK_communist:0 "투르크메니 사회주의 공화국"
  TUK_communist_DEF:0 "투르크메니 사회주의 공화국"
- TUK_fascist:0 "투르케스탄 칸국"
- TUK_fascist_DEF:0 "투르케스탄 칸국"
- TUK_neutrality_ADJ:0 "투르케스탄"
- TUK_democratic_ADJ:0 "투르케스탄" 
+ TUK_fascist:0 "투르키스탄 칸국"
+ TUK_fascist_DEF:0 "투르키스탄 칸국"
+ TUK_neutrality_ADJ:0 "투르키스탄"
+ TUK_democratic_ADJ:0 "투르키스탄" 
  TUK_communism_ADJ:0 "투르크메니"
- TUK_fascism_ADJ:0 "투르케스탄"
+ TUK_fascism_ADJ:0 "투르키스탄"
 
  ####################
  IBE_communism:0 "이베리아 연합"
