--- a/localisation/game_rules_l_english.yml
+++ b/localisation/game_rules_l_english.yml
@@ -1,4 +1,117 @@
-﻿l_english:
+﻿ l_english:
+ RULE_OPTION_YES:0 "예"
+ RULE_OPTION_NO:0 "아니요"
+ RULE_GROUP_COUNTRY_SPECIFIC:0 "국가 특성화 규칙"
+ RULE_GROUP_GENERAL_FOREIGN_POLICY:0 "대외정책"
+ RULE_ALLOW_WARGOALS:0 "전쟁 목표"
+ RULE_OPTION_ALWAYS_FREE:0 "항상 자유"
+ RULE_ALLOW_WARGOALS_ALWAYS_FREE_DESC:0 "이념과 세계 긴장도에 관계없이 무제한적입니다."
+ RULE_OPTION_LIMITED:0 "제한"
+ RULE_ALLOW_WARGOALS_LIMITED_DESC:0 "전쟁 목표 생성은 이념과 세계 긴장도에 의해 제한됩니다."
+ RULE_OPTION_FREE_25:0 "세계 긴장도 25%부터 자유"
+ RULE_OPTION_FREE_50:0 "세계 긴장도 50%부터 자유"
+ RULE_OPTION_FREE_75:0 "세계 긴장도 75%부터 자유"
+ RULE_OPTION_FREE_100:0 "세계 긴장도 100%부터 자유"
+ RULE_ALLOW_WARGOALS_FREE_25_DESC:1 "전쟁 목표 생성은 세계 긴장도가 25% 미만에서는 할 수 없지만 이후에는 모든 국가에서 사용할 수 있습니다. 이것은 모든 이념에 따른 제한을 무시하지만 중점을 통한 제한은 유지됩니다."
+ RULE_ALLOW_WARGOALS_FREE_50_DESC:1 "전쟁 목표 생성은 세계 긴장도가 50% 미만에서는 할 수 없지만 이후에는 모든 국가에서 사용할 수 있습니다. 이것은 모든 이념에 따른 제한을 무시하지만 중점을 통한 제한은 유지됩니다."
+ RULE_ALLOW_WARGOALS_FREE_75_DESC:1 "전쟁 목표 생성은 세계 긴장도가 75% 미만에서는 할 수 없지만 이후에는 모든 국가에서 사용할 수 있습니다. 이것은 모든 이념에 따른 제한을 무시하지만 중점을 통한 제한은 유지됩니다."
+ RULE_ALLOW_WARGOALS_FREE_100_DESC:1 "전쟁 목표 생성은 세계 긴장도가 100% 미만에서는 할 수 없지만 이후에는 모든 국가에서 사용할 수 있습니다. 이것은 모든 이념에 따른 제한을 무시하지만 중점을 통한 제한은 유지됩니다."
+ RULE_OPTION_FOCUSES_ONLY:0 "중점 한정"
+ RULE_ALLOW_WARGOALS_FOCUSES_ONLY_DESC:0 "전쟁 목표는 국가적 중점, 사건과 결정만으로 획득할 수 있습니다."
+ RULE_ALLOW_MILITARY_ACCESS:0 "군사 통행권 및 정박권"
+ RULE_OPTION_FREE:0 "자유"
+ RULE_OPTION_SAME_IDEOLOGY:0 "같은 이념 한정"
+ RULE_OPTION_SAME_FACTION:0 "같은 세력 한정"
+ RULE_OPTION_BLOCKED:0 "금지"
+ RULE_OPTION_ALLOWED:0 "허용"
+ RULE_OPTION_AI_ONLY:0 "AI 상대로 한정"
+ RULE_OPTION_PLAYER_ONLY:0 "플레이어 상대로 한정"
+ RULE_OPTION_NORMAL:0 "보통"
+ RULE_OPTION_NONE:0 "없음"
+ RULE_ALLOW_ACCESS_FREE_DESC:0 "모든 나라는 다른 어느 나라에든 군사 통행권 및 정박권을 허락합니다."
+ RULE_ALLOW_ACCESS_SAME_IDEOLOGY_DESC:0 "모든 나라는 같은 이념을 가진 나라에게만 군사 통행권 및 정박권을 허락합니다."
+ RULE_ALLOW_ACCESS_BLOCKED_DESC:0 "모든 나라는 세력 외부의 나라에게 군사 통행권 및 정박권을 절대 허락하지 않습니다"
+ RULE_ALLOW_RELEASE_NATIONS:0 "국가 해방"
+ RULE_ALLOW_RELEASE_NATIONS_FREE_DESC:0 "모든 나라는 특별히 제한이 없는 한 항상 국가를 해방할 수 있습니다."
+ RULE_OPTION_PEACE_ONLY:0 "평화 한정"
+ RULE_ALLOW_RELEASE_NATIONS_PEACE_ONLY_DESC:0 "모든 나라는 평화로울 때만 국가를 해방할 수 있습니다."
+ RULE_ALLOW_RELEASE_NATIONS_BLOCKED_DESC:0 "나라가 국가를 해방할 수 없습니다."
+ RULE_ALLOW_RELEASE_NATIONS_NOT_BRITAIN_TOOLTIP:0 "§Y[ENG.GetName]§!(은)는 오직 §Y국가적 중점§!의 §Y탈식민지화§! 진로에서만 나라를 해방할 수 있습니다."
+ RULE_ALLOW_RELEASE_NATIONS_PEACE_ONLY_TOOLTIP:0 "게임 규칙: §R모든 나라는 평화로울 때만 국가를 해방할 수 있습니다.§!"
+ RULE_ALLOW_RELEASE_NATIONS_BLOCKED_TOOLTIP:0 "게임 규칙: §R모든 나라는 절대 국가를 해방할 수 없습니다.§!"
+ RULE_ALLOW_LICENSING:0 "면허 생산"
+ RULE_ALLOW_LICENSING_FREE_DESC:0 "모든 나라는 어느 나라로부터든 생산 면허를 취득할 수 있습니다."
+ RULE_ALLOW_LICENSING_SAME_IDEOLOGY_DESC:0 "모든 나라는 같은 이념을 가진 나라에게만 생산 면허를 취득할 수 있습니다."
+ RULE_ALLOW_LICENSING_SAME_FACTION_DESC:0 "모든 나라는 같은 세력에 속한 나라에게만 생산 면허를 취득할 수 있습니다."
+ RULE_ALLOW_LICENSING_BLOCKED_DESC:0 "모든 나라는 특별한 사건과 결정 외의 방법으로 생산 면허를 취득할 수 없습니다."
+ RULE_ALLOW_LEND_LEASE:0 "무기대여"
+ RULE_ALLOW_LEND_LEASE_FREE_DESC:0 "모든 나라는 세계 긴장도에 관계없이 무기를 대여할 수 있습니다."
+ RULE_ALLOW_LEND_LEASE_LIMITED_DESC:0 "무기대여는 세계 긴장도와 집권 이념에 제한됩니다."
+ RULE_ALLOW_LEND_LEASE_SAME_IDEOLOGY_DESC:0 "모든 나라는 같은 이념을 가진 나라에게만 무기를 대여할 수 있습니다."
+ RULE_ALLOW_LEND_LEASE_SAME_FACTION_DESC:0 "모든 나라는 같은 세력에 속한 나라에만 무기를 대여해줍니다."
+ RULE_ALLOW_LEND_LEASE_BLOCKED_DESC:0 "모든 나라는 다른 나라에 무기를 절대 대여해 주지 않습니다."
+ RULE_ALLOW_VOLUNTEERS:0 "의용군"
+ RULE_ALLOW_VOLUNTEERS_FREE_DESC:0 "모든 나라는 세계 긴장도에 관계없이 의용군을 파병할 수 있습니다."
+ RULE_ALLOW_VOLUNTEERS_LIMITED_DESC:0 "의용군 파병은 세계 긴장도와 집권 이념에 제한됩니다."
+ RULE_ALLOW_VOLUNTEERS_SAME_IDEOLOGY_DESC:0 "모든 나라는 같은 이념을 가진 나라에게만 의용군을 파병해줍니다."
+ RULE_ALLOW_VOLUNTEERS_BLOCKED_DESC:0 "모든 나라는 다른 나라에게 의용군을 절대 파병하지 않습니다."
+ RULE_ALLOW_GUARANTEES:0 "독립 보장"
+ RULE_ALLOW_GUARANTEES_FREE_DESC:0 "세계 긴장도에 관계없이, 언제나 독립을 보장할 수 있습니다."
+ RULE_ALLOW_GUARANTEES_LIMITED_DESC:0 "독립 보장은 세계 긴장도와 이념에 제한됩니다."
+ RULE_ALLOW_GUARANTEES_SAME_IDEOLOGY_DESC:0 "모든 나라는 같은 이념을 가진 나라만 독립 보장할 수 있습니다."
+ RULE_ALLOW_GUARANTEES_BLOCKED_DESC:0 "모든 나라는 다른 나라의 독립을 보장할 수 없습니다. 게임 시작부터 보장을 받는 나라와 국가적 중점을 통한 보장에는 영향을 미치지 않습니다."
+ RULE_ALLOW_REVOKE_GUARANTEES:0 "보장 철회"
+ RULE_ALLOW_REVOKE_GUARANTEES_ALLOWED_DESC:0 "독립 보장을 철회할 수 있습니다."
+ RULE_ALLOW_REVOKE_GUARANTEES_BLOCKED_DESC:0 "독립 보장은 국가적 중점 이외의 방법으로 철회할 수 없습니다."
+ RULE_ALLOW_REVOKE_GUARANTEES_BLOCKED_TOOLTIP:0 "게임 규칙: §R독립 보장은 국가적 중점 이외의 방법으로 철회할 수 없습니다.§!"
+ RULE_ALLOW_LEAVE_FACTION:0 "세력 탈퇴"
+ RULE_ALLOW_LEAVE_FACTION_ALLOWED_DESC:0 "완전한 주권국은 평화로울 때만 세력을 탈퇴할 수 있습니다."
+ RULE_ALLOW_LEAVE_FACTION_BLOCKED_DESC:0 "모든 나라는 국가적 중점 및 사건을 제외하면 세력을 탈퇴할 수 없습니다."
+ RULE_ALLOW_KICK_FACTION:0 "세력 추방"
+ RULE_ALLOW_KICK_FACTION_ALLOWED_DESC:0 "세력의 맹주는 세력 회원국을 추방할 수 있습니다."
+ RULE_ALLOW_KICK_FACTION_BLOCKED_DESC:0 "세력의 맹주는 세력 회원국을 추방할 수 없습니다."
+ RULE_ALLOW_TAKE_OVER_FACTION:0 "세력 주도권 인계"
+ RULE_ALLOW_TAKE_OVER_FACTION_ALLOWED_DESC:0 "모든 나라는 기준을 충족할 경우 세력 주도권을 인계받을 수 있습니다."
+ RULE_ALLOW_TAKE_OVER_FACTION_BLOCKED_DESC:0 "모든 나라는 세력 주도권을 인계받을 수 없습니다."
+ RULE_GROUP_DIVISION_TEMPLATES:0 "사단 편제"
+ RULE_ALLOW_PARATROOPERS:0 "공수 강하"
+ RULE_ALLOW_PARATROOPERS_ALLOWED_DESC:0 "모든 나라는 자유롭게 공수 강하를 실행할 수 있습니다."
+ RULE_ALLOW_PARATROOPERS_BLOCKED_DESC:0 "모든 나라는 어떤 상황에서도 공수 강하를 실행할 수 없습니다. 공수부대 사단은 모병할 수 있지만, 강하 공격은 실행할 수 없습니다."
+ RULE_ALLOW_PARATROOPERS_BLOCKED_TOOLTIP:0 "게임 규칙: §R모든 나라는 어떤 상황에서도 공수 강하를 실행하지 않습니다.§!"
+ RULE_GROUP_COVERT_ACTIONS:0 "은밀 행동"
+ RULE_ALLOW_COUPS:0 "쿠데타"
+ RULE_ALLOW_COUPS_FREE_DESC:0 "모든 나라는 자유롭게 쿠데타를 감행합니다."
+ RULE_ALLOW_COUPS_AI_ONLY_DESC:0 "모든 나라는 인간이 플레이하지 않는 국가에게만 쿠데타를 감행합니다."
+ RULE_ALLOW_COUPS_BLOCKED_DESC:1 "모든 나라는 다른 국가에게 쿠데타를 감행하지 않습니다."
+ RULE_ALLOW_PARTY_BOOSTING:0 "정당 인기도 후원"
+ RULE_ALLOW_PARTY_BOOSTING_FREE_DESC:0 "모든 나라는 다른 나라의 정당 인기도를 후원할 수 있습니다."
+ RULE_ALLOW_PARTY_BOOSTING_AI_ONLY_DESC:0 "모든 나라는 인간이 플레이하지 않는 나라에게만 정당 인기도를 후원합니다."
+ RULE_ALLOW_PARTY_BOOSTING_PLAYER_ONLY_DESC:0 "모든 나라는 인간이 플레이하는 나라에게만 정당 인기도를 후원합니다."
+ RULE_ALLOW_PARTY_BOOSTING_BLOCKED_DESC:0 "모든 나라는 다른 나라의 정당 인기도를 후원할 수 없습니다."
+ RULE_GROUP_CONSTRUCTION:0 "건설"
+ RULE_GROUP_GAMEPLAY:0 "게임플레이 규칙"
+ RULE_MAXIMUM_FORT_LEVEL:0 "최대 요새 수준"
+ RULE_MAXIMUM_FORT_LEVEL_NORMAL_DESC:0 "모든 나라는 요새 및 해안 요새 건설에 보통의 제한을 받습니다."
+ RULE_MAXIMUM_FORT_LEVEL_DESC:0 "모든 나라는 정해진 수준까지만 요새 및 해안 요새를 건설할 수 있습니다. 게임 시작시의 요새는 영향을 받지 않습니다. 국가적 중점, 사건과 결정에 의해 추가되는 건물은 정해진 수준을 초과할 수 있습니다."
+ RULE_GROUP_RESEARCH:0 "연구"
+ RULE_RESEARCH_AOT:0 "시대보다 앞선 연구"
+ RULE_RESEARCH_AOT_FREE_DESC:0 "모든 나라는 아무 제한없이 시대보다 앞선 기술을 연구할 수 있습니다."
+ RULE_RESEARCH_AOT_THREE_YEARS_DESC:0 "모든 나라는 3년 앞선 기술까지 연구할 수 있습니다."
+ RULE_RESEARCH_AOT_TWO_YEARS_DESC:0 "모든 나라는 2년 앞선 기술까지 연구할 수 있습니다."
+ RULE_RESEARCH_AOT_ONE_YEARS_DESC:0 "모든 나라는 1년 앞선 기술까지 연구할 수 있습니다."
+ RULE_RESEARCH_AOT_BLOCKED_DESC:0 "모든 나라는 시대보다 앞선 기술을 연구할 수 없습니다."
+ RULE_OPTION_1:0 "1등급"
+ RULE_OPTION_2:0 "2등급"
+ RULE_OPTION_3:0 "3등급"
+ RULE_OPTION_4:0 "4등급"
+ RULE_OPTION_5:0 "5등급"
+ RULE_OPTION_6:0 "6등급"
+ RULE_OPTION_7:0 "7등급"
+ RULE_OPTION_8:0 "8등급"
+ RULE_OPTION_9:0 "9등급"
+ RULE_OPTION_THREE_YEARS:0 "3년"
+ RULE_OPTION_TWO_YEARS:0 "2년"
+ RULE_OPTION_ONE_YEARS:0 "1년"
  RULE_GROUP_USA:0 "미합중국"
  RULE_ALLOW_FASCIST_USA:0 "파시스트 미국 허용"
  RULE_ALLOW_COMMUNIST_USA:0 "공산주의 미국 허용"
@@ -11,7 +124,7 @@
  PRC_AI_BEHAVIOR:0 "@PRC 중국 공산당"
  ENG_AI_BEHAVIOR:0 "@ENG 영국"
  USA_AI_BEHAVIOR:0 "@USA 미합중국"
- RUS_AI_BEHAVIOR:0 "@RUS 러시아"
+ SOV_AI_BEHAVIOR:0 "@RUS 러시아"
  HUN_AI_BEHAVIOR:0 "@HUN 헝가리"
  ROM_AI_BEHAVIOR:0 "@ROM 루마니아"
  YUG_AI_BEHAVIOR:0 "@YUG 유고슬라비아"
@@ -25,12 +138,14 @@
  MAN_AI_BEHAVIOR:0 "@MAN 만주국"
  HOL_AI_BEHAVIOR:0 "@HOL 네덜란드"
  MEX_AI_BEHAVIOR:0 "@MEX 멕시코"
+ SPR_AI_BEHAVIOR:0 "@SPR 스페인"
+ POR_AI_BEHAVIOR:0 "@POR 포르투갈"
  RULE_OPTION_COMMUNIST:0 "공산주의"
  RULE_OPTION_FASCIST:0 "파시스트"
  RULE_OPTION_FASCIST_HISTORICAL:0 "파시스트 - 역사적"
  RULE_OPTION_FASCIST_ALTERNATE:0 "파시스트 - 대체역사"
  RULE_OPTION_DEMOCRATIC:0 "자유주의"
- RULE_OPTION_CONSERVATIVES:0 "보수주이"
+ RULE_OPTION_CONSERVATIVES:0 "보수주의"
  RULE_OPTION_NEUTRALITY:0 "비동맹주의"
  RULE_OPTION_HISTORICAL:0 "역사적"
  RULE_OPTION_ALTERNATE:0 "대체역사"
@@ -53,40 +168,40 @@
  RULE_FASCIST_HISTORICAL_ITA_AI_DESC:0 "이탈리아 AI는 최대한 많은 역사적 사건을 발생시킬 것입니다."
  RULE_FASCIST_ALTERNATE_ITA_AI_DESC:0 "이탈리아 AI는 추축국에 가입하기 전, 스페인과의 동맹을 결성하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ATTACK_TURKEY:0 "터키 공격"
- RULE_OPTION_ALLIES:0 "프랑스와 영국 동맹"
+ RULE_OPTION_ALLIES:0 "프랑스 및 영국과 동맹"
  
  #Germany#
  RULE_KAISER_GER_AI_DESC:0 "독일 AI는 카이저를 옥좌로 귀환시키는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_GER_AI:0 "공화주의 독일"
- RULE_OPTION_DEMOCRATIC_GER_AI_DESC:0 "독일 AI는 공화제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_CONSERVATIVES_GER_AI:0 "보수주의 독일"
+ RULE_DEMOCRATIC_GER_AI_DESC:0 "독일 AI는 공화국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_CONSERVATIVES_GER_AI:0 "입헌주의 독일"
  RULE_OPTION_CONSERVATIVES_GER_AI_DESC:0 "독일 AI는 입헌군주제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_ALLIES_GER_AI_DESC:0 "독일 AI는 영국과 프랑스와 동맹을 결성하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_ALLIES_GER_AI_DESC:0 "독일 AI는 프랑스 및 영국과 동맹을 맺는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  
  RULE_OPTION_FASCIST_GER_AI:0 "대독일"
- RULE_OPTION_FASCIST_GER_AI_DESC:0 "독일 AI는 대독일을 형성하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_FASCIST_GER_AI_DESC:0 "독일 AI는 대독일 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  
  #Russia#
- RULE_OPTION_COMMUNIST_RUS_AI_DESC:0 "러시아 AI는 소비에트 연방을 형성하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_DEMOCRATIC_RUS_AI_DESC:0 "러시아 AI는 러시아 공화국을 형성하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_CONSERVATIVES_RUS_AI_DESC:0 "러시아 AI는 입헌군주제를 도입하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_FASCIST_RUS_AI_DESC:0 "러시아 AI는 국가주의 군부 정치를 형성하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_ATTACK_TURKEY_RUS_AI_DESC:0 "러시아 AI는 서방의 터키 독립 보장에도 불구하고 "청년 튀르크 혁명"에서 물러서지 않을 것입니다."
+ RULE_OPTION_COMMUNIST_RUS_AI_DESC:0 "러시아 AI는 소련 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_DEMOCRATIC_RUS_AI_DESC:0 "러시아 AI는 러시아 공화국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_CONSERVATIVES_RUS_AI_DESC:0 "러시아 AI는 입헌군주제 도입 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_FASCIST_RUS_AI_DESC:0 "러시아 AI는 국가주의-군사국 형성 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_ATTACK_TURKEY_RUS_AI_DESC:0 "러시아 AI는 '청년 튀르크 반란'에서 물러서지 않을 것이며 서방의 독립보장에도 불구하고 터키에 전쟁을 선포할 것입니다."
  
  #France#
  RULE_OPTION_COMMUNIST_FRA_AI:0 "프롤레타리아 혁명"
- RULE_OPTION_COMMUNIST_FRA_AI_DESC:0 "프랑스 AI는 공산주의 개혁과 코민테른에 가입을 시도하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_MONARCHY_FRA_AI:0 "부르봉 복고"
- RULE_OPTION_MONARCHY_FRA_AI_DESC:0 "프랑스 AI는 왕정을 복고하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_IMPERIAL_FRA_AI:0 "보나파르트 복고"
- RULE_OPTION_IMPERIAL_FRA_AI_DESC:0 "프랑스 AI는 제정을 복고하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_COMMUNIST_FRA_AI_DESC:0 "프랑스 AI는 공산주의로 변하고 코민테른에 가입하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_MONARCHY_FRA_AI:0 "부르봉 왕정복고"
+ RULE_OPTION_MONARCHY_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 부르봉 왕가의 계승자를 옹립하려 하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_IMPERIAL_FRA_AI:0 "보나파르트 제정복고"
+ RULE_OPTION_IMPERIAL_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 제정복고를 시도할 것이며 보나파르트파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  
  #United Kingdom#
  RULE_OPTION_DEMOCRATIC_ENG_AI_DESC:0 "영국 AI는 폴란드를 보호하고 독일과의 방어 전쟁을 수행하며 연합국을 이끄는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_COMMUNIST_UNIONS:0 "인민들에게 힘을"
- RULE_OPTION_COMMUNIST_ENG_AI_DESC:0 "영국 AI는 노동조합에 양보를 하며 공산주의로 변하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_MONARCHY_ENG_AI:0 "왕에게 힘을"
- RULE_OPTION_MONARCHY_ENG_AI_DESC:0 "프랑스 AI는 왕정을 강화하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_COMMUNIST_ENG_AI_DESC:0 "영국 AI는 노동조합에 양보하고 공산주의로 변하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_MONARCHY_ENG_AI:0 "국왕에게 힘을"
+ RULE_OPTION_MONARCHY_ENG_AI_DESC:0 "영국 AI는 국왕에게 권한을 부여하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_THE_KINGS_PARTY:0 "국왕당에게 힘을"
  RULE_OPTION_THE_KINGS_PARTY_ENG_AI_DESC:0 "영국 AI는 국왕 에드워드 8세와 월리스 심프슨과의 결혼을 지지하고 국왕당에 권한을 부여하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_NO_MORE_APPEASEMENT:0 "유화책 중단"
@@ -145,14 +260,14 @@
  RULE_DEMOCRATIC_ALTERNATE_USA_AI_DESC:0 "미국 AI는 세계 정세에 적극적인 역할을 하는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_FASCIST_USA_AI_DESC:0 "미국 AI는 파시스트로 변하여 세계를 석권하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_OBEDIENCE_MAN_AI_DESC:0 "만주국 AI는 충성을 지키는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
- RULE_OPTION_INDEPENDENCE_MAN_AI_DESC:0 "만주국 AI는 자유를 찾고 중국 석권하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다. "
+ RULE_OPTION_INDEPENDENCE_MAN_AI_DESC:0 "만주국 AI는 자유를 찾고 중국을 석권하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_ALLOW_GUARANTEES_SAME_IDEOLOGY_TOOLTIP:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라만 독립 보장할 수 있습니다.§!"
  RULE_ALLOW_GUARANTEES_BLOCKED_TOOLTIP:0 "게임 규칙: §R모든 나라는 절대 다른 나라를 독립 보장하지 않습니다.§!"
  RULE_ALLOW_MILITARY_ACCESS_SAME_IDEOLOGY_TT:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라에게만 군사 통행권 및 정박권을 허락합니다.§!"
  RULE_ALLOW_MILITARY_ACCESS_BLOCKED_TT:0 "게임 규칙: §R모든 나라는 세력 외부의 나라에게 군사 통행권 및 정박권을 절대 허락하지 않습니다.§!"
- RULE_ALLOW_LEND_LEASE_SAME_IDEOLOGY_TT:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라에게만 장비의 무기 대여를 해줍니다.§!"
- RULE_ALLOW_LEND_LEASE_SAME_FACTION_TT:0 "게임 규칙: §R모든 나라는 같은 세력 내부의 나라에게만 장비의 무기 대여를 해줍니다.§!"
- RULE_ALLOW_LEND_LEASE_BLOCKED_TT:0 "게임 규칙: §R모든 나라는 다른 나라에게 장비의 무기 대여를 절대 해주지 않습니다.§!"
+ RULE_ALLOW_LEND_LEASE_SAME_IDEOLOGY_TT:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라에게만 무기를 대여해줍니다.§!"
+ RULE_ALLOW_LEND_LEASE_SAME_FACTION_TT:0 "게임 규칙: §R모든 나라는 같은 세력 내부의 나라에게만 무기를 대여해줍니다.§!"
+ RULE_ALLOW_LEND_LEASE_BLOCKED_TT:0 "게임 규칙: §R모든 나라는 다른 나라에게 무기를 절대 대여해 주지 않습니다.§!"
  RULE_VOLUNTEERS_BLOCKED_TT:0 "게임 규칙: §R모든 나라는 다른 나라에게 의용군을 절대 파병하지 않습니다.§!"
  RULE_VOLUNTEERS_SAME_IDEOLOGY_TT:0 "게임 규칙: §R모든 나라는 같은 이념을 가진 나라에게만 의용군을 파병해줍니다.§!"
  RULE_KICK_FROM_FACTION_BLOCKED_TOOLTIP:0 "게임 규칙: §R세력의 맹주는 세력 회원국을 추방할 수 없습니다.§!"
@@ -171,7 +286,7 @@
  RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY:0 "데 제벤 프로빈시엔" 반란의 유산"
  RULE_OPTION_LEGACY_OF_THE_DE_ZEVEN_PROVINCIEN_MUTINY_HOL_AI_DESC:0 "네덜란드 AI는 "데 제벤 프로빈시엔" 반란의 유산을 부활시키고 공산주의로 이행하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_ORANJE_BOVEN:0 "오라녜 만세"
- RULE_OPTION_ORANJE_BOVEN_HOL_AI_DESC:0 "네덜란드 AI는 군주제를 지지하고 여왕 빌헬미나에게 권력을 주려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_OPTION_ORANJE_BOVEN_HOL_AI_DESC:0 "네덜란드 AI는 군주주의를 지지하고 여왕 빌헬미나에게 권력을 주려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_CONTINUE_THE_WAR_IN_BATAVIA:0 "바타비아에서의 전쟁 재개"
  RULE_DEMOCRATIC_CONTINUE_THE_WAR_IN_BATAVIA_HOL_AI_DESC:0 "네덜란드 AI는 민주주의를 유지하되, 항복시 바타비아로 수도를 이전하려는 시도와 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
  RULE_OPTION_DEMOCRATIC_CONTINUE_THE_ZUIDERZEE_WORKS:0 "자위더르해 사업 재개"
@@ -187,7 +302,7 @@
  RULE_OPTION_FASCIST_DICTATORSHIP:0 "파시스트 독재제"
  RULE_OPTION_FASCIST_DICTATORSHIP_DESC:0 "플루타르코 카예스, 사투르니노 세디요 그리고 여타 군사 독재자들이 멕시코의 초기 민주주의 시도를 포기하고, 독일과의 동맹을 맺습니다."
  RULE_OPTION_THEOCRATIC_ORDER:0 "신정 기사단"
- RULE_OPTION_THEOCRATIC_ORDER_DESC:0 "시나키스트와 크리스테로가 멕시코의 권력을 잡고, 이교도의 대륙을 정화하려는 신생 라틴 아메리카 기사단을 창설합니다."
+ RULE_OPTION_THEOCRATIC_ORDER_DESC:0 "시나키스트와 크리스테로가 멕시코의 권력을 잡고, 이교도의 대륙을 정화하려는 신생 라틴아메리카 기사단을 창설합니다."
  RULE_OPTION_SOVIET_REPUBLIC:0 "소비에트 공화국"
  RULE_OPTION_SOVIET_REPUBLIC_DESC:0 "멕시코는 소비에트 연방과의 동맹에 다가서고, 총검을 앞세워 라틴 아메리카에 혁명을 확산시킵니다."
  RULE_OPTION_CARDENISMO:0 "카르데나스주의"
@@ -203,10 +318,23 @@
  ASIA_COLONIZATION_STATUS:0 "아시아 식민지화 상태"
  RULE_OPTION_ASIA_DECOLONIZED:0 "아시아 탈식민지화"
  RULE_OPTION_ASIA_DECOLONIZED_DESC:0 "아시아의 모든 식민지 국가들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
+ OCEANIA_COLONIZATION_STATUS:0 "오세아니아 식민지화 상태"
+ RULE_OPTION_OCEANIA_DECOLONIZED:0 "오세아니아 탈식민지화"
+ RULE_OPTION_OCEANIA_DECOLONIZED_DESC:0 "태평양의 모든 식민지 국가들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
+ RULE_OPTION_OCEANIA_UNITED:0 "폴리네시아 제국"
+ RULE_OPTION_OCEANIA_UNITED_DESC:0 "폴리네시아는 게임 시작 시 하나의 국가로 통일될 것입니다."
  ENG_FRAGMENTATION_STATUS:0 "영국 파편화 상태"
  RULE_OPTION_DEFAULT_FRAGMENTATION_DESC:0 "구성국들이 제각기 국민국가로 파편화되지 않습니다."
  RULE_OPTION_ENG_FRAGMENTED:0 "영국 파편화"
  RULE_OPTION_ENG_FRAGMENTED_DESC:0 "영국의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
+ SPR_FRAGMENTATION_STATUS:0 "스페인 파편화 상태"
+ RULE_OPTION_SPR_FRAGMENTED:0 "스페인 파편화"
+ RULE_OPTION_SPR_FRAGMENTED_DESC:0 "카탈루냐, 갈리시아, 나바라가 게임 시작부터 자유로운 독립국으로 해방됩니다."
+ RULE_OPTION_SPR_FAMILIAR:0 "11월 11일"
+ RULE_OPTION_SPR_FAMILIAR_DESC:0 "스페인의 국경은 어디서 많이 본 듯하게 그려질 것입니다."
+ FRA_FRAGMENTATION_STATUS:0 "프랑스 파편화 상태"
+ RULE_OPTION_FRA_FRAGMENTED:0 "프랑스 파편화"
+ RULE_OPTION_FRA_FRAGMENTED_DESC:0 "프랑스의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
  YUG_FRAGMENTATION_STATUS:0 "유고슬라비아 파편화 상태"
  RULE_OPTION_YUG_FRAGMENTED:0 "유고슬라비아 파편화"
  RULE_OPTION_YUG_FRAGMENTED_DESC:0 "유고슬라비아의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
@@ -216,3 +344,34 @@
  RAJ_FRAGMENTATION_STATUS:0 "인도 파편화 상태"
  RULE_OPTION_RAJ_FRAGMENTED:0 "영국령 인도 파편화"
  RULE_OPTION_RAJ_FRAGMENTED_DESC:0 "영국령 인도의 모든 구성국들이 게임 시작부터 자유로운 독립국으로 해방됩니다."
+ RULE_OPTION_NATIONALIST_HISTORICAL:0 "프랑코주의"
+ RULE_OPTION_NATIONALIST_HISTORICAL_DESC:0 "프랑코는 국민파를 장악하고 새롭고 통일된 스페인에 팔랑헤주의와 카를로스주의 이념을 병합하여 공격받지 않는 한 세계 대전에서 중립을 지키려 할 것입니다."
+ RULE_OPTION_SECOND_REPUBLIC:0 "제2공화국"
+ RULE_OPTION_SECOND_REPUBLIC_DESC:0 "스페인의 민주정부는 파시즘과 공산주의 둘 다 거부하면서 제2공화국을 유지할 것입니다."
+ RULE_OPTION_FALANGIST:0 "팔랑헤주의"
+ RULE_OPTION_FALANGIST_DESC:0 "호세 안토니오 프리모 데 리베라 휘하의 팔랑헤주의자들은 카를로스주의를 거부하고 스페인 제국주의의 회복을 모색할 것입니다."
+ RULE_OPTION_CARLIST:0 "카를로스주의"
+ RULE_OPTION_CARLIST_DESC:0 "마누엘 팔 콘데 휘하의 카를리스타들은 팔랑헤주의를 배격하고 합법적인 카를로스 왕가 아래서 구시대의 절대군주제로 복귀할 것입니다."
+ RULE_OPTION_ANARCHIST:0 "아나키즘"
+ RULE_OPTION_ANARCHIST_DESC:0 "아라곤과 카탈루냐의 아나키스트들은 파시스트와 공산주의자들을 모두 물리치고 민족국가 그 자체에 완전히 저항하기 위해 함께 뭉칠 것입니다."
+ RULE_OPTION_INDEPENDENT_COMMUNIST:0 "자주적 공산주의"
+ RULE_OPTION_INDEPENDENT_COMMUNIST_DESC:0 "마르크스주의통일노동자당과 그들의 아나키스트 동맹들은 내전 이후 스탈린주의의 멍에를 벗어 던지고 독자적인 공산주의 이념을 추구할 것입니다."
+ RULE_OPTION_STALINIST:0 "스탈린주의"
+ RULE_OPTION_STALINIST_DESC:0 "진정한 공산주의자들은 모스크바의 명령을 받아 아나키스트들과 파시스트들에게 저항하고 자주적 공산주의자들의 영향력을 억제하며 스탈린주의자들의 지도 아래 제2공화국의 새로운 시대를 열 것입니다."
+ RULE_OPTION_HISTORICAL_POR_AI_DESC:0 "살라자르 정권 하에서 포르투갈은 제2공화국을 강화하고 세계대전 중 중립을 지키려 할 것입니다."
+ RULE_OPTION_FASCIST_POR_AI_DESC:0 "라파엘 페레이라는 스페인 내전에서 국민파를 지원하고 이후 추축국 가입을 시도하면서 파시스트 독재자로 포르투갈을 장악할 것입니다."
+ RULE_OPTION_FASCIST_FIFTH_EMPIRE:0 "제5제국"
+ RULE_OPTION_FASCIST_FIFTH_EMPIRE_DESC:0 "포르투갈 정부는 파시즘을 포용하고, 스페인 내전에서 공화파에 맞서 싸우며, 잃어버린 아프리카, 아시아, 아메리카 영토를 되찾기 위해 다시 한번 주요 강국으로 부상할 것입니다."
+ RULE_OPTION_NEUTRALITY_MONARCHIST:0 "군주주의"
+ RULE_OPTION_NEUTRALITY_MONARCHIST_DESC:0 "두아르트 국왕은 포르투갈의 왕정복고 이후 브라질 군주주의자들에게 호소하여 포르투갈-브라질 제국의 복원을 시도할 예정입니다."
+ RULE_OPTION_DEMOCRATIC_POR_AI_DESC:0 "영국의 영향력으로 민주정부는 살라자르 정권을 전복시키고 영국의 도움을 받아 연합국에 합류하기 전까지 그 나라를 발전시키는데 주력할 것입니다."
+ RULE_OPTION_COMMUNIST_COMINTERN:0 "공산주의"
+ RULE_OPTION_COMMUNIST_COMINTERN_DESC:0 "포르투갈은 스페인 공화국을 지지하고 코민테른에 가입하려고 시도하면서 소비에트 연방을 따를 것입니다."
+ RULE_OPTION_COMMUNIST_INDEPENDENT:0 "통일 유럽 사회주의 공화국"
+ RULE_OPTION_COMMUNIST_INDEPENDENT_DESC:0 "공산주의자들은 정부를 뒤엎고 스페인 내전 기간 동안 스페인 민족주의자들과 맞서 싸울 것이며, 이베리아 반도를 파시즘에 대항할 유럽의 마지막 보루인 통일 유럽 사회주의 공화국으로 통합할 것입니다."
+  RULE_OPTION_MONARCHIST_ORLEANIST:0 "군주주의: 오를레앙파"
+ RULE_OPTION_MONARCHIST_LEGITIMIST:0 "군주주의: 부르봉파"
+ RULE_OPTION_MONARCHIST_BONAPARTIST:0 "군주주의: 보나파르트파"
+ RULE_MONARCHIST_ORLEANIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 오를레앙파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_MONARCHIST_LEGITIMIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 왕정복고를 시도할 것이며 부르봉 왕가의 계승자를 옹립하려 하는 것과 관련있는 국가적 중점 계통도를 따라 내려갈 것입니다."
+ RULE_MONARCHIST_BONAPARTIST_FRA_AI_DESC:0 "프랑스 AI는 프랑스의 제정복고를 시도할 것이며 보나파르트파의 계승자를 옹립하려 하는 것과 관련 있는 국가적 중점 계통도를 따라 내려갈 것입니다."
