--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -60,42 +60,42 @@
  rus_peace_3:0 "검은 눈의 코사크 소녀 (Dark-eyed Cossack-girl)"
  rus_peace_4:0 "쿠반 연대 행진곡 (Kuban Regiment March)"
  rus_peace_5:0 "볼가강의 뱃노래 (Song of the Volga Boatmen)"
- rus_peace_6:0 "Cap Song"
+# rus_peace_6:0 "Cap Song"
  rus_peace_7:0 "우리가 어떻게 쉽카의 구름 속에 서 있었는가 (The Clouds of Shipka)"
  rus_peace_8:0 "코로베이니키 (Korobeiniki)"
  rus_peace_9:0 "스텐카 라진 (Stenka Razin)"
  rus_peace_10:0 "내 사랑하는 나라 (My Beloved Country)"
- rus_war_1:0 "People's Avengers"
+# rus_war_1:0 "People's Avengers"
  rus_war_2:0 "작은 사과 (Yablochko)"
  rus_war_3:0 "슬라브 여인의 작별 (Slavianka)"
  rus_war_4:0 "시베리아 소총병 행진곡 (March of the Siberian Rifles)"
  rus_war_5:0 "초원 (Polyushka Polye)"
  rus_war_6:0 "승리의 천둥이 울려 퍼지게 하라! (The Thunder of Victory)"
  rus_war_7:0 "타찬카 (Tachanka)"
- rus_war_8:0 "In the Garden"
+# rus_war_8:0 "In the Garden"
  rus_war_9:0 "카츄샤 (Katyusha)"
  rus_war_10:0 "새키얘르벤 폴카 (Säkkijärven Polkka)" 
  #Soviet
  sov_peace_1:0 "모스크바의 밤 (Moscow Nights)"
  sov_peace_2:0 "소비에트 왈츠 (Soviet Waltz)"
- sov_peace_3:0 "The Cliff"
- sov_peace_4:0 "Evening Bell"
- sov_peace_5:0 "Nightingale"
- sov_peace_6:0 "The Patriotic Song"
- sov_peace_7:0 "Piloty"
- sov_peace_8:0 "Bombers"
- sov_peace_9:0 "Along the Peterskaia"
+# sov_peace_3:0 "The Cliff"
+# sov_peace_4:0 "Evening Bell"
+# sov_peace_5:0 "Nightingale"
+# sov_peace_6:0 "The Patriotic Song"
+# sov_peace_7:0 "Piloty"
+# sov_peace_8:0 "Bombers"
+# sov_peace_9:0 "Along the Peterskaia"
  sov_peace_10:0 "소련 국가 (Anthem of the USSR)"
  sov_war_1:0 "성전 (The Sacred War)"
- sov_war_2:0 "My Army"
- sov_war_3:0 "We are the Army of the People"
- sov_war_4:0 "Song of the Soldiers"
+ sov_war_2:0 "나의 군대 (My Army)"
+ sov_war_3:0 "우리는 인민의 군대 (We are the Army of the People)"
+# sov_war_4:0 "Song of the Soldiers"
  sov_war_5:0 "초원 (Polyushka Polye)"
  sov_war_6:0 "카츄샤 (Katyusha)"
- sov_war_7:0 "March of the Red Cavalry"
- sov_war_8:0 "Tankers' March"
- sov_war_9:0 "Unified Victory"
- sov_war_10:0 "March of the Guards' Mortarmen"
+ sov_war_7:0 "붉은 기병대 행진곡 (March of the Red Cavalry)"
+ sov_war_8:0 "전차병 행진곡 (Tankers' March)"
+# sov_war_9:0 "Unified Victory"
+ sov_war_10:0 "근위 박격포병 행진곡 (March of the Guards' Mortarmen)"
  #Germany and Austria Peace
  ger_peace_1:0 "마왕 (Erlkönig)"
  ger_peace_2:0 "경기병 서곡 (Leichte Kavallerie Overture)"
@@ -130,3 +130,41 @@
  aus_war_8:0 "연대가 거리로 나갈 때 (Regiment sein Strassen zieht)"
  aus_war_9:0 "헝가리 연대 (Ein Regiment von Ungarland)"
  aus_war_10:0 "알프스엽병 행진곡 (Alpinjäger Marsch)"
+ #Undefined
+# china_1:0 "Mu Guiying Takes Command"
+# china_2:0 "Emperor of Qinglonh"
+# china_3:0 "Blossoms of Spring"
+# china_4:0 "Dragon"
+# china_5:0 "The Dream of Love"
+# china_6:0 "Countryside Ballad"
+# china_7:0 "Ballad of North-Henan"
+# china_8:0 "Tortoise"
+# china_9:0 "The Moonlight Reflection on Erquan"
+ qing_1:0 "북양의 노래 (Song of Beiyang)"
+# qing_2:0 "Cup of Solid Gold"
+ qing_3:0 "북양함대의 노래 (Song of the Beiyang Fleet)"
+# qing_4:0 "Tai He"
+# qing_5:0 "King Qin Breaks the Front Lines"
+# qing_6:0 "Going for a Battle"
+# roc_1:0 "Indomitable Spirit"
+# roc_2:0 "Ambitions in the Sky"
+# roc_3:0 "Heroic Warriors"
+# roc_4:0 "Huang Pu's Soul"
+# prc_1:0 "Learn from Lei Feng's Good Example"
+# prc_2:0 "When the Day Comes"
+# prc_3:0 "March of the PLA"
+ prc_4:0 "중국인민해방군 군가 (Anthem of the PLA)"
+# prc_5:0 "Three Rules of Discipline and Eight Rules of Attention"
+# prc_6:0 "Soldiers Belong on the Battlefield"
+ bav_1:0 "눈을 똑바로 (Augen Geradeaus)"
+ bav_2:0 "통일전선의 노래 (Einheitsfront)"
+# bav_3:0 "Jung sind die Linden"
+# bav_4:0 "NVA anthem"
+ bav_5:0 "우리 기갑사단 (Unser Panzerdivision)"
+ bav_6:0 "프롤레타리아에게 (Auf Proletarier)"
+ bav_7:0 "폐허에서 부활하여 (Auferstanden aus Ruinen)"
+# bav_8:0 "Steigerlied"
+ bav_9:0 "조국의 노래 (Lied vom Vaterland)"
+# bav_10:0 "Warschawjanka"
+ bav_11:0 "빈의 노동자 (Arbeiter von Wien)"
+ bav_12:0 "최악의 적 (Der Schlimmste Feind)"
